# ROCR-Runtime

./: meson.build
src/: meson.build
src/core/: meson.build
src/core/common/: meson.build
src/core/inc/: meson.build
src/core/runtime/: meson.build
src/core/util/: meson.build
src/libamdhsacode/: meson.build
src/loader/: meson.build
